# telecom-noc-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  lambda_handler.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: mock_telemetry.json  mock_telemetry.py  sops.json
scripts/: seed_dynamodb.py
src/: __init__.py  graph.py  nodes.py  retriever.py  state.py  tools.py
tests/: conftest.py  test_lambda_handler.py  test_nodes.py  test_retriever.py  test_state.py
