[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "telecom-noc-agent"
version = "1.0.0"
description = "LangGraph-based AI agent for Telecom NOC with RAG-powered troubleshooting"
requires-python = ">=3.12"

# ── Pytest configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (may use moto/mock services)",
    "slow: Tests that take more than 5 seconds",
]

# ── Ruff linter configuration ────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "S",    # flake8-bandit (security)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # Use of assert (needed in tests)
    "S105",    # Hardcoded password (false positives in tests)
    "S106",    # Hardcoded password in function args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "N802"]
"scripts/**/*.py" = ["ANN", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy type checking ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests/", "scripts/", "data/"]

# ── Coverage configuration ───────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "data/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
