[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "telecom-noc-agent"
version = "1.0.0"
description = "LangGraph-based AI agent for Telecom NOC with RAG-powered troubleshooting"
requires-python = ">=3.12"

# ── Pytest configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (may use moto/mock services)",
    "slow: Tests that take more than 5 seconds",
]

# ── Ruff linter configuration ────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E402",   # Module level import not at top of file
    "E501",   # Line too long (handled by line-length setting)
    "F401",   # Imported but unused (common in __init__ files)
    "F541",   # f-string without placeholders
    "I001",   # Import block unsorted (auto-fixed by ruff format)
    "B008",   # Do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N802", "N803", "ANN"]
"scripts/**/*.py" = ["T201", "ANN"]
"data/**/*.py" = ["ANN", "E", "F"]

# ── Mypy type checking ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = ["tests/", "scripts/", "data/"]

# ── Coverage configuration ───────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "data/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
